#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
RH-2012-03-17-4:  Enhancem.   Fine-grained CheckBinaries()

RH-2012-03-17-3:  Enhancem.   remove unused -R compiler flag in qtcsh

RH-2012-03-17-2:  Enhancem.   include header file for NetBSD & FreeBSD

RH-2012-03-17-1:  Enhancem.   Break warn extra error into a separate flag

RH-2012-03-17-0:  Enhancem.   More aimk improvements

RH-2012-03-16-3:  Enhancem.   improve sys #ifdef

RH-2012-03-16-2:  Enhancem.   minor aimk cleanup

RH-2012-03-16-1:  Enhancem.   added aimk flag: -sys-libssl

RH-2012-03-16-0:  Enhancem.   Set $PATH in bdb_checkpoint.sh

RH-2012-03-15-2:  Enhancem.   Misc. cleanup

RH-2012-03-15-1:  Enhancem.   Cygwin cleanup

RH-2012-03-15-0:  Enhancem.   sge_edit cleanup

RH-2012-03-12-0:  Enhancem.   aimk cleanup

RH-2012-02-15-0:  Enhancem.:  - cleanup inst_sge
                              - added -sys-jemalloc

RH-2012-01-21-1:  Bugfix:     lx -> linux in arch

RH-2012-01-21-0:  Enhancem.   64-bit OSX port + OSX cleanup

RH-2011-11-21-1:  Enhancem.   add -y option to auto-accept prompts
                  From:       Justin Riley (with some minor changes by RH)

RH-2011-11-21-0:  Enhancem.   set JAVA_LIB_ARCH to i386 if -32 flag was passed
                  From:       Justin Riley

RH-2011-11-19-0:  Bugfix:     Exported bash functions causes erroneous
                              "environment" file
                  Issue:      2173

RH-2011-11-16-1:  Enhancem.   Cygwin port - Part 1

-------------------------------------------------------------------------------

RH-2011-11-16-0:  SVN:        Grid Engine 2011.11

RH-2011-11-14-1:  Enhancem.   manpage update
